06_app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-demo
  template:
    metadata:
      labels:
        app: web-demo
    spec:
      containers:
      - name: myapp
        image: stefanpapp/springboot
      #  imagePullPolicy: Never
        ports:
        - containerPort: 8081
