06_app/external-service.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: default
  labels:
      app: external-service
spec:
  selector:
    app: web-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
