06_app/load_balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: my-load-balancer
  namespace: default
  labels:
      app: my-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: web-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
