06_app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
  labels:
      app: my-service
spec:
  type: NodePort
  selector:
    app: web-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
      nodePort: 30001
